# Backend/Modules/Core/Modules.Core.API/Controllers/HabitDataController.cs
@@ -1,5 +1,7 @@
 ﻿using MediatR;
 using Microsoft.AspNetCore.Mvc;
+using Modules.Core.API.Dtos;
+using Modules.Core.API.Dtos.Mappers;
 using Modules.Core.App.Commands.AddDailyHabitData;
 using Modules.Core.App.Commands.RemoveDailyHabitData;
 using Modules.Core.App.Queries.GetHabitsData;
@@ -13,22 +15,24 @@ public class HabitDataController(IMediator mediator)
 {
     [HttpPost]
     [Route("add-habit-data")]
-    public async Task<IActionResult> AddHabitData([FromBody] AddDailyHabitDataCommand cmd)
+    public async Task<ActionResult<HabitDto>> AddHabitData([FromBody] AddDailyHabitDataCommand cmd)
     {
-        return Ok(await mediator.Send(cmd));
+        return Ok((await mediator.Send(cmd)).Map());
     }
 
     [HttpPost]
     [Route("clear-habit-data")]
-    public async Task<IActionResult> ClearHabitData([FromBody] RemoveDailyHabitDataCommand cmd)
+    public async Task<ActionResult<HabitDto>> ClearHabitData([FromBody] RemoveDailyHabitDataCommand cmd)
     {
-        return Ok(await mediator.Send(cmd));
+        return Ok((await mediator.Send(cmd)).Map());
     }
 
     [HttpGet]
     [Route("get-habits-data")]
-    public async Task<ActionResult<IEnumerable<GetHabitsDataQueryResponse>>> GetHabitsList([FromQuery] DateOnly dateFrom, [FromQuery] DateOnly dateTo)
+    public async Task<ActionResult<IEnumerable<HabitDto>>> GetHabitsList([FromQuery] DateOnly dateFrom, [FromQuery] DateOnly dateTo)
     {
-        return Ok(await mediator.Send(new GetHabitsDataQuery(dateFrom, dateTo)));
+        return Ok(
+            (await mediator.Send(new GetHabitsDataQuery(dateFrom, dateTo))).Select(x => x.Map())
+            );
     }
 }
