# Backend/Modules/Core/Modules.Core.App/Queries/GetHabitsData/GetHabitsDataQueryHandler.cs
@@ -1,10 +1,11 @@
 ﻿using MediatR;
 using Microsoft.EntityFrameworkCore;
+using Modules.Core.Domain.Aggregates.Habit;
 using Modules.Core.Infrastructure.DataAccessLayer.UoT;
 using SharedUtils.Jwt.CurrentUser;
 
 namespace Modules.Core.App.Queries.GetHabitsData;
-internal sealed class GetHabitsDataQueryHandler : IRequestHandler<GetHabitsDataQuery, IEnumerable<GetHabitsDataQueryResponse>>
+internal sealed class GetHabitsDataQueryHandler : IRequestHandler<GetHabitsDataQuery, IEnumerable<Habit>>
 {
     private IUnitOfWork _unitOfWork;
     private ICurrentUserService _userService;
@@ -15,29 +16,11 @@ internal sealed class GetHabitsDataQueryHandler : IRequestHandler<GetHabitsDataQ
         _userService = userService;
     }
 
-    public async Task<IEnumerable<GetHabitsDataQueryResponse>> Handle(GetHabitsDataQuery request, CancellationToken ct)
+    public async Task<IEnumerable<Habit>> Handle(GetHabitsDataQuery request, CancellationToken ct)
     {
         return (await _unitOfWork.DbContext.Habits
             .Where(x => x.UserId == _userService.UserId && x.Active)
             .Include(x => x.DailyHabitDatas.Where(d => request.DateFrom <= d.Date && d.Date <= request.DateTo))
-            .ToListAsync(ct))
-            .Select(x => new GetHabitsDataQueryResponse
-            (
-                x.Id,
-                x.Positive,
-                x.Name,
-                x.Active,
-                x.Description,
-                x.Icon,
-                x.LastClickedDate,
-                x.StrikeCounter,
-                x.DailyHabitDatas
-                    .Select(d => new DailyHabitsDataDto
-                    (
-                        d.Date,
-                        d.Count
-                    ))
-                    .ToList()
-            ));
+            .ToListAsync(ct));
     }
 }
